Changelog
=========

1.1.dev0 - (unreleased)
-----------------------
* Bug fix: fixed README markup
  [alecghica refs #82296]

1.0 - (2017-04-12)
------------------
* Feature: related to index and score:
    - moved the index creation to the async instance
    - add similarity score next to object link in dialog
    - [valipod refs #83163]
*  Feature: added to registry settings:
    - equivalent content types sets, use of stopwords, number of shown suggestions
    - max. score difference between suggestions, dialog title and text
    - [valipod refs #83163]
* Pre-upgrade step: run etc/scripts/prereq.sh on each backend
  [alecghica refs #82296]
* Pre-upgrade step: run deploy.sh
  [alecghica refs #82296]
* Upgrade step: from control panel instal eea.similarity
  [valipod refs #82296]
  [alecghica refs #82296]
* Feature: Initial release
  [valipod refs #82296]
